--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.28",
@@ -32,8 +33,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
-    "sass": "^1.26.5",
+    "sass": "^1.32.13",
     "sass-loader": "^8.0.2",
+    "svg-sprite-loader": "^6.0.6",
+    "svgo": "^1.3.2",
     "typescript": "~4.1.5",
     "vue-cli-plugin-element-plus": "~0.0.13"
   },
